--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
             "email": "sa.rohani72@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "8.1.*|8.2.*|8.3.*",
+        "laravel/framework":"8.*|9.*|10.*|11.*"
+    }
 }
